--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css' rel='stylesheet' />
-    <title>React App</title>
+    <title>Optimitzador</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
